@@ -1,5 +1,11 @@
 2007-10-25  Dan Williams  <dcbw@redhat.com>
 
+	* src/wireless-dialog.c
+		- (get_default_type_for_security): avoid dereferencing auth_alg when
+			it's NULL
+
+2007-10-25  Dan Williams  <dcbw@redhat.com>
+
 	* src/wireless-security/ws-wpa-psk.c
 		- (ws_wpa_psk_new): hide Type combo as it's not being used yet
 
